<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OnlineSelection">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Search"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/search"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnSingle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/single"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:layout_constraintEnd_toStartOf="@+id/btnMulti"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/multi"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:layout_constraintStart_toEndOf="@+id/btnSingle"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOnlineImages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSingle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        />

    <ProgressBar
        android:id="@+id/pbSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSingle"
        app:layout_constraintBottom_toTopOf="@+id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/upload"
        app:layout_constraintTop_toBottomOf="@+id/rvOnlineImages"
        app:layout_constraintStart_toEndOf="@+id/btnSingle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnViewSavedImages"
        />

    <Button
        android:id="@+id/btnViewSavedImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/view_saved_images"
        app:layout_constraintTop_toBottomOf="@+id/btnUpload"
        app:layout_constraintStart_toEndOf="@+id/btnSingle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>